--- a/app/src/main/res/layout/neighborhood_tree_dialog.xml
+++ b/app/src/main/res/layout/neighborhood_tree_dialog.xml
@@ -78,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -118,6 +119,7 @@
             android:textSize="15dp"
             android:textStyle="bold" />
     </LinearLayout>
+
 
 
 </LinearLayout>
