--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
-
+            android:id="@+id/change_email_input"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#9C9C9C"
