--- a/app/src/main/res/layout/neighborhood_tree_dialog.xml
+++ b/app/src/main/res/layout/neighborhood_tree_dialog.xml
@@ -71,8 +71,8 @@
         android:id="@+id/user_tree_image"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp" />
+        android:layout_margin="30dp"
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
