--- a/app/src/main/res/layout/all_list.xml
+++ b/app/src/main/res/layout/all_list.xml
@@ -6,50 +6,61 @@
 
 
     <LinearLayout
+        android:id="@+id/all_user_page"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_margin="5dp"
         android:background="@drawable/corner2"
         android:orientation="horizontal">
 
+
         <TextView
-            android:id="@+id/all_rank_num"
-            android:layout_width="wrap_content"
+            android:id="@+id/all_nickname_l"
+            android:layout_marginLeft="30dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
             android:shadowColor="#33000000"
             android:shadowDx="7.0"
             android:shadowDy="7.0"
             android:shadowRadius="7.0"
-            android:text="1위"
+            android:text="상명대 모범생"
             android:textColor="@color/green1"
-            android:textSize="@dimen/size1"
+            android:textSize="23dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/all_nikname"
-            android:layout_width="230dp"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/all_tree_count_l"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
             android:shadowColor="#33000000"
             android:shadowDx="7.0"
             android:shadowDy="7.0"
             android:shadowRadius="7.0"
-            android:text="상명대 불주먹"
+            android:text="수"
             android:textColor="@color/green1"
-            android:textSize="@dimen/size1"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
+
+
         <TextView
-            android:id="@+id/all_tree_count"
-            android:layout_width="wrap_content"
-            android:layout_height="21dp"
+            android:id="@+id/all_followerCount_l"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="(나무 수)"
-            android:textColor="@color/login_background"
-            android:textSize="@dimen/size2" />
+            android:shadowColor="#33000000"
+            android:shadowDx="7.0"
+            android:shadowDy="7.0"
+            android:shadowRadius="7.0"
+            android:text="상"
+            android:textColor="@color/green1"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+
 
 
     </LinearLayout>
